Ordeno mis carruseles dentro de section-carousels y arreglo bug de desbordamiento agregando overflow-x: hidden en section-carousels

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,9 +4,10 @@
 }
 
 body {
+    width: 100%;
     min-height: 100vh;
     display: grid;
-    grid-template-rows: 8vh 1fr;
+    grid-template-rows: 8vh auto;
     /*
     display: flex;
     flex-direction: column;
@@ -65,14 +66,14 @@ a:link {
     }
 
 .main-page {
-    display: grid;
     grid-row: 2;
-    grid-template-rows: auto 2fr;
+    display: grid;
+    grid-template-rows: auto auto;
     padding-left: 50px;
     background: 
-        url('/styles/components/Pantheon2.png');
-    background-size: cover;
-    background-position: center;
+        url('/styles/components/Pantheon2.png') center/cover no-repeat;
+    width: 100%;
+    min-height: 100%
 }
     .hero {
         grid-row: 1;
@@ -104,7 +105,8 @@ a:link {
     .hero__action {
         display: flex;
         flex-direction: row;
-        width: 450px;
+        width: 100%;
+        max-width: 450px;
         height: 50px;
         gap: 15px;
     }
@@ -113,14 +115,27 @@ a:link {
             height: 100%;
             border-radius: 8px;
         }
+
+    .section-carousels {
+        grid-row: 2;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        overflow-x: hidden;
+        padding: 0 0 10px 0;
+        height: 100%;
+    }   
         
         .corousel {
             padding-top: 15px;
             display: flex;
             flex-direction: row;
+            flex: 0 0 auto;
             overflow-x: auto;
             gap: 15px;
+            scroll-snap-type: x mandatory;
         }
+
 
         .film {
             flex: 0 0 auto;
@@ -128,6 +143,7 @@ a:link {
             height: 180px;
             border: 1px solid white;
             border-radius: 5px;
+            scroll-snap-align: start;
         }
 
 /*volver a poner section-corrouserls en el html junto con sus estilos y hacer lo que dice tu amigo */
